@@ -58,6 +58,7 @@ following names for their contribution to the product.
 == Patch Contributors ==
 * Agbad
 * Ahmad Sherif
+* Azliq7
 * Borislav Manolov
 * Brad Jorsch
 * Brent G
